src/objects/Supplier_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_paid_on__c</fullName>
        <label>Date paid on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_amount__c</fullName>
        <label>Invoice amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>